# raft-a-tui

./: .gitignore  AGENTS.md  CLAUDE.md  CLIENT_SERVER_PLAN.md  Cargo.toml  README.md  ROADMAP.md  build.rs  justfile
.claude/skills/raft-implementation-guide/: REFERENCE.md  SKILL.md
.claude/skills/raft-implementation-guide/templates/: ready_loop.rs
.claude/skills/raft-tui-integration/: REFERENCE.md  SKILL.md
.claude/skills/ratatui-tui-builder/: REFERENCE.md  SKILL.md
crates/raft-client/: Cargo.toml
crates/raft-client/src/: main.rs
crates/raft-core/: Cargo.toml
crates/raft-core/src/: builder.rs  command_handler.rs  commands.rs  disk_storage.rs  entry_applicator.rs  lib.rs  network.rs  node.rs  raft_loop.rs  raft_node.rs  ready_processor.rs  snapshot.rs  storage.rs  tcp_transport.rs  test_support.rs
crates/raft-core/tests/: codec_generic.rs  crash_recovery_e2e.rs  disk_storage_basic.rs  leader_only_proposals.rs  network_routing.rs  node_basic.rs  node_snapshots.rs  node_snapshots_edge_cases.rs  protobuf_roundtrip.rs  raft_loop_basic.rs  raft_node_basic.rs  storage_applied_index.rs  tcp_transport_e2e.rs  three_node_cluster.rs  user_command_aliases.rs  user_command_parse.rs
crates/raft-proto/: Cargo.toml  build.rs
crates/raft-proto/proto/: kv.proto  rpc.proto
crates/raft-proto/src/: lib.rs
crates/raft-server/: Cargo.toml
crates/raft-server/src/: cli.rs  main.rs  server.rs
scripts/: claude-hook.sh
src/: cli.rs  codec.rs  commands.rs  disk_storage.rs  lib.rs  main.rs  network.rs  node.rs  raft_driver.rs  raft_loop.rs  raft_node.rs  storage.rs  tcp_transport.rs
tests/: codec_generic.rs  crash_recovery_e2e.rs  disk_storage_basic.rs  leader_only_proposals.rs  network_routing.rs  node_basic.rs  node_snapshots.rs  node_snapshots_edge_cases.rs  protobuf_roundtrip.rs  raft_loop_basic.rs  raft_node_basic.rs  storage_applied_index.rs  three_node_cluster.rs  user_command_aliases.rs  user_command_parse.rs
