[package]
name = "raft-a-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
raft = "0.7"
protobuf = { version = "3.7.2", features = ["with-bytes"] }
slog = "2.8.2"
slog-term = "2.9.2"
slog-async = "2.8.0"

ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.29"

serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
crossbeam-channel = "0.5.15"
clap = { version = "4.5.51", features = ["derive"] }
