[package]
name = "raft-a-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
raft = { version = "0.7.0", default-features = false, features = ["prost-codec", "default-logger"] }
prost = "0.14.1"
prost-types = "0.14.1"
slog = "2.8.2"
slog-term = "2.9.2"
slog-async = "2.8.0"

ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.29"

serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
crossbeam-channel = "0.5.15"
clap = { version = "4.5.51", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.14.1"