[package]
name = "raft-core"
version = "0.1.0"
edition = "2021"

[dependencies]
raft = { version = "0.7.0", default-features = false, features = ["prost-codec"] }
prost = "0.13"
prost-types = "0.13"
prost_011 = { package = "prost", version = "0.11.9" }
slog = "2.8.2"
slog-term = "2.9.2"
slog-async = "2.8.0"
crossbeam-channel = "0.5.15"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1.11.0", features = ["v4"] }
sled = "0.34"
bincode = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }

# Local
raft-proto = { path = "../raft-proto" }
