[package]
name = "raft-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.29"
clap = { version = "4.5.51", features = ["derive"] }
slog = "2.8.2"
slog-term = "2.9.2"
slog-async = "2.8.0"
crossbeam-channel = "0.5.15"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"

# Local
raft-core = { path = "../raft-core" }
raft-proto = { path = "../raft-proto" }
